# SeraphAudioPlayer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  README.md  bug.md  build_app.lnk  index.html  issues.md  issues2.md  mockup_archive_lyrics.html  package-lock.json  package.json  synapse_hifi_music_player (1).html  tailwind.config.js  vcpkg.json  vite.config.ts  初始化.md
.github/workflows/: ci.yml  release.yml
app/: CMakeLists.txt
app/controller/: PlayerController.cpp  PlayerController.h  PlayerState.h
app/playlist/: CueSheet.cpp  CueSheet.h  Playlist.cpp  Playlist.h  PlaylistIO.cpp  PlaylistIO.h
core/: CMakeLists.txt
core/buffer/: RingBuffer.cpp  RingBuffer.h
core/decoder/: AacDecoder.cpp  AacDecoder.h  DecoderFactory.cpp  DecoderFactory.h  DffDecoder.cpp  DffDecoder.h  DsdDecoder.cpp  DsdDecoder.h  FlacDecoder.cpp  FlacDecoder.h  IDecoder.h  M4aDecoder.cpp  M4aDecoder.h  MfMediaDecoder.cpp  MfMediaDecoder.h  Mp3Decoder.cpp  Mp3Decoder.h  OpusDecoder.cpp  OpusDecoder.h  VorbisDecoder.cpp  VorbisDecoder.h  WavDecoder.cpp  WavDecoder.h
core/dsd/: DopMode.h
core/dsp/: Equalizer.cpp  Equalizer.h  FormatConverter.cpp  FormatConverter.h  PolyphaseResampler.cpp  PolyphaseResampler.h  PolyphaseResampler_avx2.cpp  Visualizer.cpp  Visualizer.h
core/format/: AudioFormat.cpp  AudioFormat.h
core/lyrics/: LyricsLoader.cpp  LyricsLoader.h
core/metadata/: MetadataReader.cpp  MetadataReader.h
core/output/: IAudioOutput.h
crates/seraph-audio/: Cargo.toml
crates/seraph-audio/src/: backend.rs  device.rs  engine.rs  lib.rs  spectrum.rs  wasapi.rs
crates/seraph-core/: Cargo.toml
crates/seraph-core/src/: bus.rs  event.rs  lib.rs  state.rs  types.rs
crates/seraph-decoder/: Cargo.toml
crates/seraph-decoder/src/: decoder.rs  dsd.rs  ffmpeg.rs  lib.rs  symphonia.rs
crates/seraph-dsp/: Cargo.toml
crates/seraph-dsp/src/: chain.rs  crossfeed.rs  dsd.rs  eq.rs  lib.rs  resampler.rs
crates/seraph-playlist/: Cargo.toml
crates/seraph-playlist/src/: lib.rs  library.rs  track.rs
crates/seraph-visualizer/: Cargo.toml
crates/seraph-visualizer/src/: analysis.rs  fft.rs  lib.rs
design/visualizer-demo/: fullscreen.html  index.html  levels.html  loudness.html  soundfield.html  spectrogram.html  spectrum.html
design/visualizer-demo/assets/: engine.js  panels.js  seraph-viz.css
docs/: ASIO.md
docs/audit/: 01-总览与修复路线图.md  02-音频引擎层审查.md  03-解码与DSP层审查.md  04-Tauri-IPC层审查.md  05-React前端层审查.md
examples/: CMakeLists.txt
examples/cli_player_demo/: CMakeLists.txt  README.md  main.cpp
examples/wasapi_callback_demo/: CMakeLists.txt  README.md  main.cpp
examples/wasapi_devices_demo/: CMakeLists.txt  README.md  main.cpp
examples/wasapi_exclusive_demo/: CMakeLists.txt  README.md  main.cpp
examples/wasapi_play_wav_demo/: CMakeLists.txt  README.md  main.cpp
platform/: CMakeLists.txt
platform/asio/: AsioOutput.cpp  AsioOutput.h
platform/mmdevice/: DeviceEnumerator.cpp  DeviceEnumerator.h  DeviceTypes.h
platform/smtc/: SmtcController.cpp  SmtcController.h
platform/taskbar/: JumpList.cpp  JumpList.h  TaskbarButtons.cpp  TaskbarButtons.h
platform/wasapi/: WasapiExclusiveOutput.cpp  WasapiExclusiveOutput.h  WasapiSharedOutput.cpp  WasapiSharedOutput.h
scripts/: build_app.ps1  build_demo.ps1  bump-version.mjs  package_release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  smtc.rs  state.rs
src-tauri/src/ipc/: bilibili.rs  cache.rs  config.rs  dsp.rs  error.rs  events.rs  library.rs  mod.rs  playback.rs  playlist_io.rs  system.rs  update.rs  visualizer.rs
src-tauri/src/ipc/bilibili/: commands.rs  constants.rs  ffmpeg.rs  impls_and_tests.rs  import_audio.rs  imports.rs  parsing.rs  prelude.rs  session.rs  types.rs
src/boot/: applyConfigImport.ts
src/components/effects/: AmbientAurora.tsx
src/components/layout/: RightPanel.tsx  Sidebar.tsx  SplashScreen.tsx  TitleBar.tsx
src/components/menu/: ContextMenuLayer.tsx  CreatePlaylistWithTracksDialog.tsx  DeleteTrackConfirmDialog.tsx  ReloadStreamingDialog.tsx  TrackInfoDialog.tsx
src/components/modal/: DragImportOverlay.tsx  Notification.tsx  SettingsModal.tsx
src/components/pages/: MainPages.tsx
src/components/player/: AlbumArt.tsx  DeviceMenu.tsx  HiResBadge.tsx  PlaybackControls.tsx  (+3 more)
src/data/: mock-playlist.ts
src/hooks/: useFileDropImport.ts  useFluentHover.ts  useHydratePlayerStore.ts  usePlayback.ts  usePlayerEvents.ts  useRevealWindow.ts  useStreamingEvents.ts  useUpdateCheck.ts  useWaveform.ts
src/lib/: clipboard.ts  configTransfer.test.ts  configTransfer.ts  eqApoParser.test.ts  eqApoParser.ts  eqPresets.ts  eqResponse.ts  format.ts  startup.ts  system.ts  tauri.test.ts  tauri.ts  trackMenu.ts  update.ts
src/store/: analysisSettings.test.ts  analysisSettings.ts  contextMenu.test.ts  contextMenu.ts  eq.test.ts  eq.ts  player.test.ts  player.ts
src/types/: dsp.ts  track.ts
tests/: CMakeLists.txt
ui/: CMakeLists.txt  main.cpp
ui/bridge/: CoverImageProvider.cpp  CoverImageProvider.h  DeviceBridge.cpp  DeviceBridge.h  PlayerViewModel.cpp  PlayerViewModel.h  PlaylistViewModel.cpp  PlaylistViewModel.h  ShortcutsViewModel.cpp  ShortcutsViewModel.h
ui/qml/: main.qml
ui/qml/components/: AppIcon.qml  EqDialog.qml  HeroBanner.qml  HiResBadge.qml  IconCircleBtn.qml  LyricsView.qml  MiniPlayer.qml  PlaceholderPage.qml  PlaylistCard.qml  QueueDrawer.qml  ReorderableTrackList.qml  SearchUtil.js  ShortcutsDialog.qml  Sidebar.qml  SidebarIconButton.qml  SidebarItem.qml  SpectrumView.qml  TitleBar.qml  TrackContextMenu.qml  TrackListPage.qml  TrackRow.qml  WaveformProgressBar.qml
ui/qml/views/: AlbumDetailView.qml  AlbumView.qml  ArtistDetailView.qml  ArtistView.qml  HistoryView.qml  HomeView.qml  LibraryView.qml  LikedView.qml  NowPlayingView.qml  PlaylistDetailView.qml  PlaylistView.qml  PlaylistsView.qml  SearchResultsView.qml  SettingsView.qml  VizSettingsView.qml
ui/resources/: dark.qss  qml.qrc  qml_rc.py  resources_rc.py
(+44 files in other folders)
