[package]
name = "seraph-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Seraph audio player — audio backend abstraction (WASAPI, ASIO, CoreAudio, ALSA)"

[dependencies]
seraph-core = { workspace = true }
seraph-decoder = { workspace = true }
seraph-dsp = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rtrb = { workspace = true }
cpal = "0.15"

[target.'cfg(windows)'.dependencies]
wasapi = "0.23"
