[package]
name = "seraph-dsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Seraph audio player — DSP traits (resampler, DSD converter)"

[dependencies]
seraph-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
